responsive alignment fix

--- a/src/app/learner/pages/learner-new-my-course/learner-new-my-course.component.scss
+++ b/src/app/learner/pages/learner-new-my-course/learner-new-my-course.component.scss
@@ -472,6 +472,7 @@
     }
     .viltActivitiesQA,
     .courseProgression {
+      width: 50%;
       .icons {
         cursor: pointer;
         p {
@@ -508,7 +509,7 @@
       .percentage {
         width: 39%;
         @media only screen and (min-width: 720px) {
-          width: 16%;
+          width: 26%;
         }
       }
     }
